Correction du retour à la ligne dans la liste de listes, titreoverflow hidden, sauvegarde dans le localStorage lors de la modification d'un todo

--- a/app/Navbar/Navbar.css
+++ b/app/Navbar/Navbar.css
@@ -39,7 +39,9 @@
     height: 30px;
     line-height: 30px;
     padding-left: 20px;
+    padding-right: 20px;
     font-size: 15;
+    white-space: pre;
 }
 
 .my-navbar .my-button li:hover {
@@ -64,4 +66,5 @@
     font-size: 30px;
     font-family: sans-serif;
     font-weight: bold;
+    overflow: hidden;
 }
